--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -28,12 +28,20 @@
   .hero {
     padding-top: 150px;
     height: 590px;
-    padding-left: $container-padding;
+    padding-left: 64px;
 
     &__title {
       font-weight: normal;
       font-size: 32px;
       line-height: 64px;
     }
+  }
+}
+
+@media (max-width: 540px) {
+  .hero {
+    padding-top: 150px;
+    height: 590px;
+    padding-left: $container-padding;
   }
 }
