--- a/src/templates/price.hbs
+++ b/src/templates/price.hbs
@@ -14,7 +14,7 @@
           <span data-translate="price-descripton-1-span-4">Readiness 2-3 weeks</span><br />
           <span data-translate="price-descripton-1-span-5">Make up, visage</span><br />
         </div>
-        <button class="price-item__order-btn button button_filled">
+        <button class="price-item__order-btn button button_filled" data-translate="order">
           Order shooting
         </button>
       </li>
@@ -28,7 +28,7 @@
           <span data-translate="price-descripton-2-span-4">Readiness 1-2 weeks</span><br />
           <span data-translate="price-descripton-2-span-5">Make up, visage</span><br />
         </div>
-        <button class="price-item__order-btn button button_filled">
+        <button class="price-item__order-btn button button_filled" data-translate="order">
           Order shooting
         </button>
       </li>
