--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -145,12 +145,50 @@
   }
 }
 
+.theme-switcher,
 .language-switcher {
-  padding-left: 16px;
+  margin-left: 16px;
   font-weight: bold;
   font-size: 20px;
   line-height: 50px;
+}
 
+.theme-switcher {
+  &__link {
+    width: 32px;
+    height: 32px;
+    display: block;
+    border-radius: 50%;
+    overflow: hidden;
+    transition: 0.2s;
+
+    &_light {
+      background: white;
+    }
+
+    &_dark {
+      background: black;
+    }
+
+    svg {
+      display: block;
+    }
+
+    &_dark {
+      fill: $theme-color;
+    }
+
+    &_light {
+      fill: $theme-color;
+    }
+  }
+
+  &__link:hover {
+    box-shadow: 0px 0px 4px 2px $theme-color;
+  }
+}
+
+.language-switcher {
   &__link {
 
     &_active {
@@ -161,7 +199,6 @@
   &__link:hover {
     color: $theme-color;
   }
-
 }
 
 @media (max-width: 768px) {
