--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -63,7 +63,7 @@ ul {
   &:hover {
     color: $text-color;
     
-    transform: translatey(-5px);
+    // transform: translatey(-5px);
     // box-shadow: 0 0.5em 0.5em -0.4em $theme-color;
     box-shadow: 0 0 0 20px transparent;
     animation: pulse 0.8s;
@@ -144,6 +144,12 @@ ul {
     svg {
       fill: $theme-color;
     }
+  }
+}
+
+.logo {
+  svg {
+    fill: $text-with-bg-image;
   }
 }
 
