--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -14,6 +14,7 @@
     font-weight: bold;
     font-size: 60px;
     line-height: 120px;
+    color: $text-with-bg-image;
   }
 
   &__text {
@@ -21,6 +22,7 @@
     line-height: 40px;
     margin-top: 10px;
     margin-bottom: 25px;
+    color: $text-with-bg-image;
   }
 }
 
