--- a/src/templates/contacts.hbs
+++ b/src/templates/contacts.hbs
@@ -1,7 +1,7 @@
 <section class="contacts section" id="contacts">
   <div class="contacts__content section__content">
     <div class="contacts__container">
-      <div class="contacts__title" data-translate="contact-me">Contact me</div>
+      <h2 class="contacts__title" data-translate="contact-me">Contact me</h2>
       <form class="contacts__form contacts-form" action="#send">
         <div class="contacts-form__row">
           <input name="email" type="email" placeholder="E-mail">
@@ -10,7 +10,7 @@
           <input name="phone" type="tel" placeholder="Phone">
         </div>
         <div class="contacts-form__row">
-          <textarea name="message" id="" cols="30" rows="10" placeholder="Message"></textarea>
+          <textarea name="message" cols="30" rows="10" placeholder="Message"></textarea>
         </div>
         <div class="contacts-form__row">
           <button class="contacts-form__submit button button_filled" data-translate="send-message">
