fix: minor requirements and adaptive styling fixes

--- a/src/styles/video.scss
+++ b/src/styles/video.scss
@@ -1,5 +1,4 @@
 .video__player {
-  
   width: 100%;
   position: relative;
   display: flex;
@@ -9,13 +8,36 @@
   &-play-btn {
     z-index: 10;
     position: absolute;
-    width: 150px;
-    height: 150px;
-    object-fit: contain;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background: transparent;
+
+    img {
+      width: 150px;
+      height: 150px;
+      object-fit: contain;
+    }
   }
 
   &-img {
     width: 100%;
     object-fit: contain;
+  }
+}
+
+@media (max-width: 768px) {
+  .video {
+    margin-left: calc(-1 * #{$container-padding});
+    margin-right: calc(-1 * #{$container-padding});
+  }
+
+  .video__player {
+    &-play-btn {
+      img {
+        width: 75px;
+        height: 75px;
+      }
+    }
   }
 }
