--- a/src/templates/header.hbs
+++ b/src/templates/header.hbs
@@ -9,11 +9,11 @@
   </div>
   <nav class="header__nav">
     <div class="header__menu-container">
-      <div class="header__menu-hamburger menu-hamburger">
+      <button class="header__menu-hamburger menu-hamburger">
         <div class="menu-hamburger__line"></div>
         <div class="menu-hamburger__line"></div>
         <div class="menu-hamburger__line"></div>
-      </div>
+      </button>
       <ul class="header-menu">
         <li class="header-menu__item">
           <a class="header-menu__item-link" href="#skills" data-translate="skills">Skills</a>
