--- a/src/templates/skills.hbs
+++ b/src/templates/skills.hbs
@@ -1,5 +1,5 @@
 <section class="skills section" id="skills">
-  <div class="section__header-container">
+  <div class="section__header-container skills__header-container">
     <h2 class="section__header" data-translate="skills">Skills</h2>
   </div>
   <div class="section__content">
