--- a/src/templates/video.hbs
+++ b/src/templates/video.hbs
@@ -4,7 +4,9 @@
   </div>
   <div class="section__content">
     <div class="video__player video-player">
-      <img class="video__player-play-btn" src="../assets/video/play-btn.svg" alt="play btn placeholder">
+      <button class="video__player-play-btn">
+        <img src="../assets/video/play-btn.svg" alt="play btn placeholder">
+      </button>
       <img class="video__player-img" src="../pictures/video/video-player.jpg" alt="video player placeholder">
     </div>
   </div>
