--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -126,8 +126,12 @@ ul {
 
 .logo {
   display: block;
-  width: 50px;
-  height: 50px;
+
+  a {
+    display: block;
+    width: 50px;
+    height: 50px;
+  }
 }
 
 .logo,
@@ -163,6 +167,8 @@ ul {
 
     &__header {
       font-size: 32px;
+      line-height: 40px;
+      margin: 20px 0;
     }
   }
 }
