--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -34,6 +34,9 @@
   flex-direction: column;
   z-index: 1;
   position: relative;
+  background: transparent;
+  border: none;
+  outline: none;
 
   &__line {
     width: $hamburger-size;
@@ -131,10 +134,11 @@
   display: flex;
   align-items: center;
   height: 50px;
+  width: 472px;
+  justify-content: space-around;
 
   &__item-link {
     display: block;
-    padding: 0 16px;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
@@ -206,7 +210,8 @@
 
 @media (max-width: 768px) {
   .header {
-    padding: 0 64px;
+    padding-right: 64px;
+    padding-left: 60px;
 
     &__nav {
       flex-direction: row-reverse;
@@ -277,6 +282,7 @@
     min-height: 100vh;
     flex-direction: column;
     align-items: flex-start;
+    justify-content: flex-start;
     background: $bg-color;
 
     &__item-link {
