--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -1,10 +1,12 @@
 .hero {
   padding-top: 250px;
+  padding-left: 80px;
+  margin: 0 calc(-1 * #{$container-padding});
   height: 910px;
   text-align: left;
-  padding-left: 80px;
   background: url("../pictures/bg.jpg") no-repeat;
-  background-position: top center;
+  background-position: left center;
+  background-size: cover;
   
   &__inner {
     max-width: 470px;
@@ -28,14 +30,24 @@
 
 @media (max-width: 768px) {
   .hero {
-    padding-top: 150px;
+    padding-top: 168px;
     height: 590px;
-    padding-left: 64px;
+    padding-left: 60px;
+
+    &__inner {
+      max-width: 420px;
+    }
 
     &__title {
       font-weight: normal;
       font-size: 32px;
       line-height: 64px;
+    }
+
+    &__text {
+      line-height: 24px;
+      margin-top: 20px;
+      margin-bottom: 60px;
     }
   }
 }
