--- a/src/styles/skills.scss
+++ b/src/styles/skills.scss
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: stretch;
+    align-items: center;
     text-align: center;
     padding-bottom: 10px;
     margin-bottom: $skills-list-item-gap;
@@ -30,6 +30,7 @@
 
     &-title {
       margin-bottom: 20px;
+      font-family: $main-font;
       font-weight: bold;
       font-size: 20px;
       line-height: 40px;
@@ -38,7 +39,8 @@
     &-text {
       font-size: 18px;
       line-height: 36px;
-      padding: 0 20px;
+      // padding: 0 20px;
+      width: 88%;
     }
   }
 
@@ -65,9 +67,28 @@
 
 @media (max-width: 768px) {
   .skills {
+    padding: 0 40px;
+    
+    &__list {
+      margin-bottom: -75px;
+    }
+    
+    &__header-container {
+      margin-bottom: 45px;
+    }
+    
     &__list-item {
+      margin-bottom: 75px;
+      padding: 0;
+
+      &-icon {
+        margin-bottom: 30px;
+      }
+  
       &-text {
-        padding: 0;
+        font-size: 18px;
+        line-height: 22px;
+        width: 95%;
       }
     }
   }
