--- a/src/styles/skills.scss
+++ b/src/styles/skills.scss
@@ -14,6 +14,7 @@
     text-align: center;
     padding-bottom: 10px;
     margin-bottom: $skills-list-item-gap;
+    overflow: hidden;
 
     &-icon {
       text-align: center;
@@ -72,7 +73,7 @@
     &__list {
       margin-bottom: -75px;
     }
-    
+
     &__header-container {
       margin-bottom: 45px;
     }
