--- a/custom-video/src/templates/player-controls.ejs
+++ b/custom-video/src/templates/player-controls.ejs
@@ -4,24 +4,29 @@
     <li class="settings-menu__item">
       <div>Playback speed</div>
       <div class="settings-menu__options">
-        <label>
-          <input type="radio" name="playback" value="0.5">
+        <label class="custom-radio">
+          <input type="radio" name="playback" value="0.25">
+          <span class="custom-radio__checkbox"></span>
           <span>0.25x</span>
         </label> 
-        <label>
+        <label class="custom-radio">
           <input type="radio" name="playback" value="0.5">
+          <span class="custom-radio__checkbox"></span>
           <span>0.5x</span>
         </label>        
-        <label>
+        <label class="custom-radio">
           <input type="radio" name="playback" value="1" checked>
+          <span class="custom-radio__checkbox"></span>
           <span>normal</span>
         </label>
-        <label>
+        <label class="custom-radio">
           <input type="radio" name="playback" value="1.5">
+          <span class="custom-radio__checkbox"></span>
           <span>1.5x</span>
         </label>
-        <label>
+        <label class="custom-radio">
           <input type="radio" name="playback" value="2">
+          <span class="custom-radio__checkbox"></span>
           <span>2x</span>
         </label>
       </div>
@@ -29,16 +34,19 @@
     <li class="settings-menu__item">
       <div>Skip interval</div>
       <div class="settings-menu__options">
-        <label>
+        <label class="custom-radio">
           <input type="radio" name="skip" value="10">
+          <span class="custom-radio__checkbox"></span>
           <span>10s</span>
         </label>
-        <label>
+        <label class="custom-radio">
           <input type="radio" name="skip" value="20" checked>
+          <span class="custom-radio__checkbox"></span>
           <span>20s</span>
         </label>
-        <label>
+        <label class="custom-radio">
           <input type="radio" name="skip" value="30">
+          <span class="custom-radio__checkbox"></span>
           <span>30s</span>
         </label>
       </div>
